# rosalind

./: .gitignore  CHANGELOG.md  Rosalind.hs  aspc.hs  cat.hs  cat.py  cons.hs  corr.py  dbpr.hs  dbru.py  dna.hs  fib.hs  fibd.hs  gc.hs  grph.hs  hamm.hs  iev.hs  inod.hs  iprb.hs  kmer.hs  kmp.hs  kmp.py  lcsm.hs  lcsm.py  lcsq.py  lexf.hs  lexv.hs  lgis.py  lia.hs  long.hs  long.py  mmch.hs  mprot.hs  mrna.hs  nwck.py  orf.hs  package.yaml  pdst.hs  perm.hs  pmch.hs  (+20 more)
dist-newstyle/cache/: compiler  config
eval/: Main.hs
lcsm/: lcsm.py  test_lcsm.py
prob/: Main.hs
rstr/: Main.hs
