[project]
name= "rosalind.info"
dependencies = [
    "pytest>=8.3.5",
    "black>=25.1.0",
    "typer>=0.15.3"
]
requires-python = ">=3.10"

[tool.poetry]
name = "rosalind"
version = "0.1.0"
description = ""
authors = ["codeguru <codeguru42@gmail.com>"]
package-mode = false

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
